fix background overflow issue

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -404,9 +404,10 @@ body {
   background: no-repeat center right fixed url('/img/brown-1.jpg');
   background-size: cover;
   background-color: #000000;
+  overflow: scroll;
 }
 .overlay {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
